use www subdomain and https

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://grassfedmountaingoat.com/"
+baseURL = "https://www.grassfedmountaingoat.com/"
 languageCode = "en-us"
 title = "grassfedmountaingoat"
 theme = "hermit"
