--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,9 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
 rssLimit = 10  # Maximum number of items in the RSS feed.
 copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
 
+[author]
+  name = "grassfedmountaingoat"
+
 
 # pygmentsCodefences  = true
 # pygmentsUseClasses  = true
